# droidpi

./: .gitignore  AUTOMATED_RELEASES.md  Cargo.toml  LICENSE-MIT  README.md
.github/: FILES_OVERVIEW.md  RELEASE.md  RELEASE_CHECKLIST.md  SETUP_GUIDE.md
.github/milestones/: android_drawable_option_release.json
.github/workflows/: ci.yml  release.yml
.zed/: debug.json
src/: main.rs
src/cli/: flag.rs  mod.rs
src/clip/: mod.rs
src/context/: mod.rs  mode.rs
src/help/: mod.rs
src/platform/: android.rs  flutter.rs  mod.rs
src/resize/: mod.rs
